// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select matches Default story snapshot 1`] = `
<div>
  <div
    class="sm:w-48"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
    >
      Region
    </label>
    <select
      class="w-full h-[42px] px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
    >
      <option
        value="All"
      >
        All
      </option>
      <option
        value="Africa"
      >
        Africa
      </option>
      <option
        value="Americas"
      >
        Americas
      </option>
      <option
        value="Asia"
      >
        Asia
      </option>
      <option
        value="Europe"
      >
        Europe
      </option>
      <option
        value="Oceania"
      >
        Oceania
      </option>
    </select>
  </div>
</div>
`;

exports[`Select matches LongLabel story snapshot 1`] = `
<div>
  <div
    class="sm:w-48"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
    >
      Select a region to filter countries
    </label>
    <select
      class="w-full h-[42px] px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
    >
      <option
        value="All"
      >
        All
      </option>
      <option
        value="Africa"
      >
        Africa
      </option>
      <option
        value="Americas"
      >
        Americas
      </option>
      <option
        value="Asia"
      >
        Asia
      </option>
      <option
        value="Europe"
      >
        Europe
      </option>
      <option
        value="Oceania"
      >
        Oceania
      </option>
    </select>
  </div>
</div>
`;

exports[`Select matches LongOptionText story snapshot 1`] = `
<div>
  <div
    class="sm:w-48"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
    >
      Category
    </label>
    <select
      class="w-full h-[42px] px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
    >
      <option
        value="Very Long Option Name That Might Wrap"
      >
        Very Long Option Name That Might Wrap
      </option>
      <option
        value="Another Extremely Long Option Name"
      >
        Another Extremely Long Option Name
      </option>
      <option
        value="Short"
      >
        Short
      </option>
    </select>
  </div>
</div>
`;

exports[`Select matches WithFewOptions story snapshot 1`] = `
<div>
  <div
    class="sm:w-48"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
    >
      Status
    </label>
    <select
      class="w-full h-[42px] px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
    >
      <option
        value="Active"
      >
        Active
      </option>
      <option
        value="Inactive"
      >
        Inactive
      </option>
    </select>
  </div>
</div>
`;

exports[`Select matches WithManyOptions story snapshot 1`] = `
<div>
  <div
    class="sm:w-48"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
    >
      Country
    </label>
    <select
      class="w-full h-[42px] px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
    >
      <option
        value="United States"
      >
        United States
      </option>
      <option
        value="Canada"
      >
        Canada
      </option>
      <option
        value="Mexico"
      >
        Mexico
      </option>
      <option
        value="Brazil"
      >
        Brazil
      </option>
      <option
        value="Argentina"
      >
        Argentina
      </option>
      <option
        value="Chile"
      >
        Chile
      </option>
      <option
        value="United Kingdom"
      >
        United Kingdom
      </option>
      <option
        value="France"
      >
        France
      </option>
      <option
        value="Germany"
      >
        Germany
      </option>
      <option
        value="Italy"
      >
        Italy
      </option>
      <option
        value="Spain"
      >
        Spain
      </option>
      <option
        value="Japan"
      >
        Japan
      </option>
      <option
        value="China"
      >
        China
      </option>
      <option
        value="India"
      >
        India
      </option>
      <option
        value="Australia"
      >
        Australia
      </option>
    </select>
  </div>
</div>
`;
